<resources>
    <string name="app_name">Gamepedia</string>
    <string name="start">Start</string>
    <string name="submit">SUBMIT</string>
    <string name="question_placeholder">Quem a/o personagem principal do jogo The Last Of Us?</string>
    <string name="option_a">Option A</string>
    <string name="option_b">Option B</string>
    <string name="option_c">Option C</string>
    <string name="option_d">Option D</string>
    <string name="win_message">VOCÊ GANHOU!!</string>
    <string name="points">50 pontos</string>
    <string name="number_questions">5/5</string>
    <string name="lost_message">VOCÊ PERDEU!!</string>
    <string name="finish">FINISH</string>
</resources>