<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/ic_game_background"
    tools:context=".GameActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                android:text="@string/question_placeholder" />

            <TextView
                android:id="@+id/tv_option_1"
                android:layout_width="match_parent"
                android:text="@string/option_a"
                android:textSize="20sp"
                android:textAlignment="center"
                android:padding="12dp"
                android:background="@color/white"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_option_2"
                android:layout_width="match_parent"
                android:text="@string/option_b"
                android:textSize="20sp"
                android:textAlignment="center"
                android:background="@color/white"
                android:padding="12dp"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_option_3"
                android:layout_width="match_parent"
                android:text="@string/option_c"
                android:textSize="20sp"
                android:textAlignment="center"
                android:padding="12dp"
                android:background="@color/white"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_option_4"
                android:layout_width="match_parent"
                android:text="@string/option_d"
                android:textSize="20sp"
                android:padding="12dp"
                android:textAlignment="center"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/button_submit_answer"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="24sp" />

</LinearLayout>